--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@ border-radius: 10px;
   border: none;
   outline: none;
   font-size: 16px;
-  background: rgb(43, 43, 210);
+  background:rgb(26, 160, 255);
   color: #f5f5f5;
   border-radius: 10px;
   cursor: pointer;
@@ -78,3 +78,12 @@ border-radius: 10px;
   justify-content: space-between;
 }
 
+select{
+  margin-top: 5px;
+  display: block;
+  width: 100%;
+  padding: 10px;
+  outline: none;
+  border: 1px solid #aaa;
+  border-radius: 5px;
+}
