--- a/src/Registration.css
+++ b/src/Registration.css
@@ -7,21 +7,23 @@
 body {
   background-color: white;
   font-family: "Raleway", sans-serif;
+
 }
 
-.App {
+.Ap {
 position: absolute;
 top:50%;
 left:50%;
 transform: translate(-50%,-50%);
-width: 380px;
+width: auto;
 padding: 20px 30px;
 background: white;
 box-shadow: 5px 5px 20px rgb(0,0,0);
 border-radius: 10px;
+margin-top: 100px;
 }
 
-.App .form h2 {
+.Ap .form h2 {
   text-align: center;
   color: #222;
   margin: 10px 0px 20px;
@@ -29,17 +31,17 @@ border-radius: 10px;
 }
 
 
-.App .form .form-element{
+.Ap .form .form-element{
   margin: 15px 0px;
 }
 
-.App .form .form-element label{
+.Ap .form .form-element label{
   font-size: 14px;
   color: #222;
 }
 
-.App .form .form-element input[type="text"],
-.App .form .form-element input[type="password"]{
+.Ap .form .form-element input[type="text"],
+.Ap .form .form-element input[type="password"]{
   margin-top: 5px;
   display: block;
   width: 100%;
@@ -49,7 +51,7 @@ border-radius: 10px;
   border-radius: 5px;
 }
 
-.App .form .form-element button{
+.Ap .form .form-element button{
   width: 100%;
   height: 40px;
   border: none;
@@ -60,7 +62,7 @@ border-radius: 10px;
   border-radius: 10px;
   cursor: pointer;
 }
-.App .Admin button{
+.Ap .Admin button{
   display: inline-block;
   width: 40%;
   height: 30px;
@@ -74,7 +76,7 @@ border-radius: 10px;
   cursor: pointer;
 }
 
-.App .Admin{
+.Ap .Admin{
   display: flex;
   justify-content: space-between;
 }
