--- a/src/Registration.css
+++ b/src/Registration.css
@@ -90,3 +90,14 @@ select{
   border: 1px solid #aaa;
   border-radius: 5px;
 }
+.Submit{
+  width: 10%;
+  height: 40px;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  background: #222;
+  color: #f5f5f5;
+  border-radius: 10px;
+  cursor: pointer;
+}
