--- a/src/login/Registration.css
+++ b/src/login/Registration.css
@@ -4,23 +4,13 @@
     box-sizing: border-box;
 }
 
-html,
-body {
-    height: 100%;
-    width: 100%;
-}
-
 body {
     background-color: white;
     font-family: "Raleway", sans-serif;
 }
 
-.App {
-    /* position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); */
-    margin: 100px auto;
+.Ap {
+    margin: 50px auto;
     width: 380px;
     padding: 20px 30px;
     background: white;
@@ -28,24 +18,24 @@ body {
     border-radius: 10px;
 }
 
-.App .form h2 {
+.Ap .form h2 {
     text-align: center;
     color: #222;
     margin: 10px 0px 20px;
     font-size: 25px;
 }
 
-.App .form .form-element {
+.Ap .form .form-element {
     margin: 15px 0px;
 }
 
-.App .form .form-element label {
+.Ap .form .form-element label {
     font-size: 14px;
     color: #222;
 }
 
-.App .form .form-element input[type="text"],
-.App .form .form-element input[type="password"] {
+.Ap .form .form-element input[type="text"],
+.Ap .form .form-element input[type="password"] {
     margin-top: 5px;
     display: block;
     width: 100%;
@@ -55,7 +45,7 @@ body {
     border-radius: 5px;
 }
 
-.App .form .form-element button {
+.Ap .form .form-element button {
     width: 100%;
     height: 40px;
     border: none;
@@ -67,15 +57,10 @@ body {
     cursor: pointer;
 }
 
-.App .form .form-element button:disabled {
-    background: #6c6c6c;
-    cursor: not-allowed;
-}
-
-.App .Admin button {
+.Ap .Admin button {
     display: inline-block;
-    min-width: 40%;
-    min-height: 35px;
+    width: 40%;
+    height: 30px;
     margin-top: 10px;
     border: none;
     outline: none;
@@ -86,7 +71,7 @@ body {
     cursor: pointer;
 }
 
-.App .Admin {
+.Ap .Admin {
     display: flex;
     justify-content: space-between;
 }
@@ -101,16 +86,14 @@ select {
     border-radius: 5px;
 }
 
-.error_msg {
-    text-Align: center;
-    color: red;
-    font-Size: 20px;
-    padding: 15px 0 5px;
-}
-
-.success_msg {
-    text-Align: center;
-    color: rgb(32, 170, 69);
-    font-Size: 20px;
-    padding: 15px 0 5px;
+.Submit {
+    height: 40px;
+    border: none;
+    padding: 5px;
+    outline: none;
+    font-size: 16px;
+    background: #222;
+    color: #f5f5f5;
+    border-radius: 10px;
+    cursor: pointer;
 }
