--- a/src/App.css
+++ b/src/App.css
@@ -16,12 +16,9 @@ body {
 }
 
 .App {
-    /* position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); */
     margin: 100px auto;
-    width: 380px;
+    width: 400px;
+    max-width: 600px;
     padding: 20px 30px;
     background: white;
     box-shadow: 5px 5px 20px rgb(0, 0, 0);
@@ -55,11 +52,42 @@ body {
     border-radius: 5px;
 }
 
-.App .form .form-element button {
+.form-element option {
+    padding: 5px;
+    display: block;
+}
+
+.button-exam-choice {
+    background-color: white;
+    color: black;
+    border: 2px solid black;
+    width: 100%;
+    height: 40px;
+    outline: none;
+    margin: 10px;
+    font-size: 16px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.button-exam-choice-selected {
+    background-color: black;
+    color: white;
+    width: 100%;
+    height: 40px;
+    outline: none;
+    margin: 10px;
+    font-size: 16px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.App .form .form-element button:not([type=button]) {
     width: 100%;
     height: 40px;
     border: none;
     outline: none;
+    margin: 10px;
     font-size: 16px;
     background: #222;
     color: #f5f5f5;
@@ -89,6 +117,19 @@ body {
 .App .Admin {
     display: flex;
     justify-content: space-between;
+}
+
+.select-radio {
+    display: flex;
+    flex-direction: column;
+}
+
+.select-radio label {
+    margin: 10px 0;
+}
+
+.select-radio input {
+    margin-right: 10px;
 }
 
 select {
